Updates based on AGENTS.md.